--- a/Kubernetes.TestService.Api/Properties/launchSettings.json
+++ b/Kubernetes.TestService.Api/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Kubernetes.TestService": {
+    "Kubernetes.TestService.Api": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/applicationStatus",
